src/pages/Home/Home.css
@custom-media --mediaDesktop (max-width: 2080px);
@custom-media --mediaLaptop (max-width: 1680px);
@custom-media --mediaTablet (max-width: 1040px);
@custom-media --mediaMobile (max-width: 696px);
@custom-media --mediaMobileLS (max-height: 696px);
@custom-media --mediaMobileS (max-width: 400px);
@custom-media --mediaUseMotion (prefers-reduced-motion: no-preference);
@custom-media --mediaReduceMotion (prefers-reduced-motion: reduce);
@custom-media --mediaTouch (pointer: coarse);
@custom-media --mediaNoTouch (pointer: fine);


.hero {
  position: relative;
  width: 100vw;
  height: 100svh;
  overflow: hidden;
  display: flex;
  align-items: flex-end;
  padding: 2em;
}

.hero-img {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

.hero-header {
  position: relative;
  width: 100%;
  display: flex;
  justify-content: space-between;
  z-index: 1;
  overflow: visible;
}

.hero-header h1 {
  color: var(--bgrory);
  font-family: "Atelier";
  line-height: 1;
  font-size: 13vw;


}

.sticky-titles {
  position: relative;
  width: 100vw;
  height: 100svh;
  overflow: hidden;
  padding: 2em;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  color: var(--font-color-200) !important;
}

.sticky-titles-nav,
.sticky-titles-footer {
  width: 100%;
  display: flex;
  justify-content: space-between;

}

.sticky-titles-nav {
  border-bottom: 1px dashed var(--font-color-200);
  padding-bottom: 0.5em;
}

.sticky-titles-nav a {
  color: var(--font-color-200);
  text-decoration: none;
  transition: opacity 0.3s ease;
}

.sticky-titles-nav a:hover {
  opacity: 0.7;
}

.sticky-titles-footer {
  border-top: 1px dashed var(--font-color-200);
  padding-top: 0.5em;
}

.sticky-titles h2 {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  text-align: center;
  will-change: transform, opacity;

  line-height: 1;
}

.sticky-work-header {
  position: relative;
  width: 100vw;
  height: 100svh;
  padding: 2em;
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
  overflow: hidden;
}

.sticky-work-header h1 {
  opacity: 0.234;
  color: var(--font-color-200) !important;
  line-height: 1;
}

.home-work {
  max-width: 100%;
  margin: 0 2rem;
  padding: 8em 2em;
  background-color: var(--bgrory);
  border-radius: 1em;

}

.home-work-list {
  width: 60%;
  margin: 0 auto;
  display: flex;
  flex-direction: column;
  gap:6em;
  margin-bottom: 6em;
}

.home-work-item {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
  gap: 2em;
  color: var(--fgrory) !important;
}

.miro-icon {
  width: 100px;
  height: 100px;
}
@media (max-width: 1000px) {
  .miro-icon {
    width: 80px;
    height: 80px;
  }
}

.services {
  width: 70%;
}

.hobbies {
  width: 100vw;
  padding: 2em;
  padding-bottom: 0;
  display: flex;
  gap: 1em;
  color: var(--font-color-200) !important;
}

.hobby {
  flex: 1;
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
  aspect-ratio: 1;
  border: 1px dashed var(--font-color-200);
  border-radius: 1em;
}

@media (max-width: 1000px) {
  .mobileScrollIndicator svg {
    width: 20px;
    height: 20px;
    bottom: 10vh !important;
  }

  

  .home-work {
    margin: 0 auto;
  }

  .hero-header {
   
    gap: 0.25em;
  }

  .hero-header h1 {
    font-size: 12vw; 
  }



  

  .hero,
  .sticky-titles,
  .sticky-work-header,
  .hobbies {
    padding: 1.25em;
  }

  .sticky-titles h2 {
    width: 90%;
  }

  .hobbies {
    padding-bottom: 0;
  }

  .home-work {
    padding: 8em 1.25em;
  }

  .home-work-list {
    width: 100%;
  }

  .hobbies {
    flex-direction: column;
    gap: 1.25em;
  }

  .hobby {
    aspect-ratio: 5/3;
  }
}

@keyframes introScrollIndicator {
  0% {
    transform: translate3d(-1px, 0, 0);
    opacity: 0;
  }

  20% {
    transform: translate3d(-1px, 0, 0);
    opacity: 1;
  }

  100% {
    transform: translate3d(-1px, 8px, 0);
    opacity: 0;
  }
}

.scrollIndicator {
  border: 2px solid color-mix(in lab, var(--bgrory) 40%, transparent);
  border-radius: 20px;
  width: 28px;
  height: 40px;
  position: fixed;
  bottom: 12%;
  left: 50%;
  transform: translateX(-50%);
  transition-property: opacity;
  transition-duration: var(--durationL);
  transition-timing-function: ease;
  opacity: 0;

  &::before {
    content: '';
    height: 7px;
    width: 2px;
    background: color-mix(in lab, var(--bgrory) 40%, transparent);
    border-radius: 4px;
    position: absolute;
    top: 6px;
    left: 50%;
    transform: translateX(-1px);
    animation: introScrollIndicator 2s ease infinite;
  }

  @media (--mediaUseMotion) {
    transition-property: opacity, transform;

    &::before {
      animation: introScrollIndicator 2s ease infinite;
    }
  }

  &[data-status='entered'] {
    opacity: 1;
  }

  &[data-hidden='true'] {
    opacity: 0;

    @media (--mediaUseMotion) {
      transform: translate3d(-50%, 20px, 0);
    }
  }

  @media (--mediaTouch) {
    display: none;
  }

  &:focus-visible {
    opacity: 1;
  }
}

@keyframes introMobileScrollIndicator {
  0% {
    transform: translateY(0);
  }

  50% {
    transform: translateY(-10px);
  }

  100% {
    transform: translateY(0);
  }
}

.mobileScrollIndicator {
  position: fixed;
  bottom: 1px;
  left: 48%;
  transform: translateX(-50%);
  z-index: 999;
  border-radius: 30%;
  background-color: transparent;
  opacity: 0;
  animation-duration: 1.5s;
  padding: 20px;
  animation: introScrollIndicator 2s ease infinite;
  transform: translate(-50%, -50%);


  &[data-status='entered'] {
    opacity: 1;
  }

  &[data-hidden='true'] {
    display: none;
    transform: translateX(-50%);
  }

  @media (--mediaNoTouch) {
    display: none;
  }
  

  & svg {
    stroke: var(--bgrory) !important;
  }

  &:focus-visible {
    opacity: 1;
  }


}



@media (max-width: 696px) {
  .mobileScrollIndicator {
    bottom: 10vh !important;
    padding: 10px !important;
    left: 42% !important;
  }

  .mobileScrollIndicator svg {
    width: 40px;
    height: 20px;
    bottom: 10vh !important;
  }
}

